# RelRAG

./: .coverage  .dockerignore  .env.example  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  Dockerfile.bench  README.md  docker-compose.bench.yml  docker-compose.yml  initial_prompt.md  pyproject.toml
.cursor/: settings.json
.cursor/agents/: architect.md
.cursor/commands/: rebuild-and-run-with-env-example.md
.cursor/rules/: Basic-Development-Principles.mdc  Conflict-Resolution.mdc  Task-Decomposition-and-Completion.mdc  Test-Coverage.mdc
.cursor/skills/intermediate-git-commit/: SKILL.md
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_add_display_names.py
docs/: CONFLICTS.md  CONVENTIONS.md  TASKS.md  benchmark.md
docs/adr/: 0000-template.md
frontend/: admin.html  collection.html  collections.html  configurations.html  document.html  index.html  nginx.conf
frontend/css/: style.css
frontend/js/: api.js  auth.js  config.js  layout.js  theme.js
k8s/: deployment.yaml  namespace.yaml  secret.yaml  service.yaml
keycloak/: README.md
keycloak/import/: relrag-realm.json
scripts/: bench_search.py  bench_upload.py  rag_curl_commands.md  test_rag_api.ps1  test_rag_api.sh
src/relrag/: __init__.py  config.py  main.py
src/relrag/application/: __init__.py
src/relrag/application/dto/: __init__.py  chunking_config.py  document_dto.py
src/relrag/application/ports/: __init__.py  chunker.py  embedding_provider.py  permission_checker.py  unit_of_work.py
src/relrag/domain/: __init__.py  exceptions.py
src/relrag/domain/entities/: __init__.py  chunk.py  collection.py  configuration.py  document.py  pack.py  permission.py  property.py  role.py
src/relrag/interfaces/: __init__.py
tests/: conftest.py  test_health.py
tests/api/: conftest.py  test_resources.py
tests/e2e/: conftest.py  test_frontend.py
tests/unit/: test_chunk_repository_filters.py  test_document_parsers_binary.py  test_document_parsers_metadata.py  test_document_parsers_registry.py  test_document_parsers_text.py  test_exceptions.py  test_property_schema_item.py  test_recursive_chunker.py  test_source_hash.py  test_use_cases.py
(+64 files in other folders)
