[project]
name = "relrag"
version = "0.1.0"
description = "RAG and full-text search framework around PostgreSQL 18 and pgvector"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "falcon>=3.1",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "psycopg[binary,pool]>=3.2",
    "pgvector>=0.3",
    "python-keycloak>=3.0",
    "openai>=1.0",
    "structlog>=24.0",
    "opentelemetry-api>=1.0",
    "opentelemetry-sdk>=1.0",
    "opentelemetry-instrumentation-falcon",
    "opentelemetry-instrumentation-psycopg",
    "opentelemetry-exporter-otlp>=1.0",
    "alembic>=1.13",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8",
    "mypy>=1.11",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "pre-commit>=3.0",
]

[project.scripts]
relrag = "relrag.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/relrag"]

[tool.hatch.metadata]
readme = "README.md"

[tool.uv]
dev-dependencies = [
    "ruff>=0.8",
    "mypy>=1.11",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "pre-commit>=3.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = "relrag.infrastructure.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "relrag.interfaces.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = "relrag.main"
disallow_untyped_defs = false
